--- a/app/scss/components/_input.scss
+++ b/app/scss/components/_input.scss
@@ -12,6 +12,6 @@
 input{
 	height: 46px;
 	padding: 10px 36px;
-	line-height: 1.33333;
+	// line-height: 1.33333;
 	border:1.5px solid black;
 }
