--- a/app/scss/layout/_form.scss
+++ b/app/scss/layout/_form.scss
@@ -1,9 +1,14 @@
+.form__container{
+	max-width:500px;
+	margin:0  auto;
+}
+
 .form{
 	display:flex;
 }
 .form__input{
 	width:100%;
-	margin-bottom:10px;
+
 }
 .form__content{
 	width:100%;
